View Issue Details

IDProjectCategoryView StatusLast Update
0027033Open CASCADEOCCT:Modeling Algorithmspublic2016-12-09 16:39
ReporterabvAssigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Target Version7.1.0Fixed in Version7.1.0 
Summary0027033: Modeling -- ensure stable result of area calculation
DescriptionThe results of sprops command are unstable on some shapes, yielding different values from time to time for exactly the same shape. This should be fixed so that results are always the same.

Note that similar problem has been reported in 0025945, but in that issue the differences were explained by differences in argument shapes (tolerances).

The instability has been discovered on shape produced during test bugs step bug11856
Steps To Reproducepload TOPTEST XDE

stepread [locate_data_file OCC11856.stp] a * ;# just to generate shape, too large to attach here

# "sprops result -eps 0.1" in most cases yields 611185, but sometimes (about 1 per 10 runs) 61173, 577943, or other
for {set i 1} {$i < 1000} {incr i} {checkprops result -s 611185 -eps 0.1}
TagsNo tags attached.
Test case numberbugs modalg_6 bug27033

Relationships

related to 0025945 closedbugmaster Open CASCADE Make stable checking of shape global properties in tests 

Activities

ifv

2016-11-24 11:31

developer   ~0060751

Cannot reproduce. May be there are any specific condition?

msv

2016-11-24 14:47

developer   ~0060754

It is reproduced on MSVS 2013 in Release mode. Computation on the face 225 is unstable.

git

2016-11-24 16:58

administrator   ~0060755

Branch CR27033 has been created by msv.

SHA-1: 5c98c234cee2aaff1026004f2829e36ff43674b6


Detailed log of new commits:

Author: msv
Date: Thu Nov 24 16:56:30 2016 +0300

    0027033: Modeling -- ensure stable result of area calculation
    
    The method BRepGProp_Face::LKnots has been corrected to make proper initialization of the output data for the case of a circle.

msv

2016-11-24 16:59

developer   ~0060756

Dear Igor, please review the fix.

ifv

2016-11-25 08:58

developer   ~0060768

Seems to be valid

git

2016-12-07 11:30

administrator   ~0061239

Branch CR27033 has been deleted by kgv.

SHA-1: 5c98c234cee2aaff1026004f2829e36ff43674b6

Related Changesets

occt: master 89aebdea

2016-11-25 09:40:25

msv


Committer: apn Details Diff
0027033: Modeling -- ensure stable result of area calculation

The method BRepGProp_Face::LKnots has been corrected to make proper initialization of the output data for the case of a circle.
Added test case bugs/modalg_6/bug27033
Affected Issues
0027033
mod - src/BRepGProp/BRepGProp_Face.cxx Diff File
add - tests/bugs/modalg_6/bug27033 Diff File

Issue History

Date Modified Username Field Change
2015-12-23 06:46 abv New Issue
2015-12-23 06:46 abv Assigned To => msv
2015-12-23 06:50 abv Steps to Reproduce Updated
2015-12-23 06:51 abv Relationship added related to 0025945
2015-12-23 06:52 abv Target Version 7.0.0 => 7.1.0
2015-12-23 09:52 msv Assigned To msv => ifv
2015-12-23 09:52 msv Status new => assigned
2016-10-28 11:54 msv Target Version 7.1.0 => 7.2.0
2016-11-24 11:31 ifv Note Added: 0060751
2016-11-24 11:31 ifv Assigned To ifv => abv
2016-11-24 11:31 ifv Status assigned => feedback
2016-11-24 14:47 msv Note Added: 0060754
2016-11-24 16:58 git Note Added: 0060755
2016-11-24 16:59 msv Assigned To abv => msv
2016-11-24 16:59 msv Status feedback => assigned
2016-11-24 16:59 msv Note Added: 0060756
2016-11-24 16:59 msv Assigned To msv => ifv
2016-11-24 16:59 msv Status assigned => resolved
2016-11-25 08:58 ifv Note Added: 0060768
2016-11-25 08:58 ifv Assigned To ifv => bugmaster
2016-11-25 08:58 ifv Status resolved => reviewed
2016-11-25 12:42 apn Test case number => bugs modalg_6 bug27033
2016-11-25 12:43 apn Target Version 7.2.0 => 7.1.0
2016-11-25 14:42 apn Changeset attached => occt master 89aebdea
2016-11-25 14:42 apn Assigned To bugmaster => apn
2016-11-25 14:42 apn Status reviewed => verified
2016-11-25 14:42 apn Resolution open => fixed
2016-12-07 11:30 git Note Added: 0061239
2016-12-09 16:30 aiv Status verified => closed
2016-12-09 16:39 aiv Fixed in Version => 7.1.0